--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <section class="hero">
-            <div class="hero-introduction">
+            <div class="hero-introduction flex">
                 <h2>Elena Joy <br> Photography
                 </h2>
                 <p>
